--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* These are CSS variables */
 :root {
     --main: #E2C8BB;
-    --secondary: #8B7D77;
+    --secondary: #CDB3A7;
 }
 
 /* This is an element tag */
@@ -9,7 +9,59 @@ body {
     background-color: var(--main);
     margin: 0px;
 }
-
+.topnav {
+    overflow: hidden;
+    background-color: var(--secondary);
+  }
+  .topnav a {
+    float: left;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  .topnav a:hover {
+    background-color: var(--main);
+    color: black;
+  }
+  .topnav input[type=text] {
+    float: right;
+    padding: 6px;
+    margin-top: 8px;
+    margin-right: 16px;
+    border: none;
+    font-size: 17px;
+  }
+  @media screen and (max-width: 600px) {
+    .topnav a, .topnav input[type=text] {
+      float: none;
+      display: block;
+      text-align: left;
+      width: 100%;
+      margin: 0;
+      padding: 14px;
+    }
+    
+    .topnav input[type=text] {
+      border: 1px solid #ccc;  
+    }
+  }
+h1   {
+    color: white; 
+    background-color: var(--secondary); 
+    padding: 10px;
+    text-align: center;
+    font-size: 96px;
+}
+p   {
+    color: white; 
+    background-color: var(--secondary); 
+    padding: 10px;
+    text-align: center;
+    font-size: 36px;
+}
 /* This is a class */
 .container {
     padding: 16px 10vw 16px 10vw;
