Figured out why the button wasn't centralised on its own
Buttons are naturally inline-block elements, and so have no idea about the width of the page. If we make them block elements, then you can use margin: X auto and they will become centred!

--- a/style.css
+++ b/style.css
@@ -83,11 +83,6 @@ h1,p    {
   transform: translateX(-40%);
 }
 
-.flex-center {
-  display: flex;
-  justify-content: center;
-}
-
 .button {
   color: white;
   padding: 15px 60px;
@@ -95,7 +90,8 @@ h1,p    {
   text-decoration: none;
   font-size: 36px;
   font-family: "roboto";
-  margin: 4px 0;
+  display: block;
+  margin: 4px auto;
   cursor: pointer;
   background-color: #8B7D77;
   border-radius: 44px;
