--- a/style.css
+++ b/style.css
@@ -100,10 +100,6 @@ h1,p    {
   position: relative;
   left: -36px;
 }
-.flex-center {
-  display: flex;
-  justify-content: center;
-}
 .shoe-name {
   text-align: center;
 }
@@ -114,7 +110,8 @@ h1,p    {
   text-decoration: none;
   font-size: 36px;
   font-family: "roboto";
-  margin: 4px 0px;
+  display: block;
+  margin: 4px auto;
   cursor: pointer;
   background-color: #8B7D77;
   border-radius: 44px;
